--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .App-header {
+  background-image: url(/img/brewery.jpg);
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
